# sqrt

./: CMakeLists.txt
include/: sqrts.h
src/: babyloniansqrt.c  bakhshalisqrt.c  bitsqrt.c  main.c  taylorsqrt.c  twovaritsqrt.c
